[ADD] initial install script

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -1,16 +1,12 @@
 migration:
   options:
     install_command: odoo
+    install_args: --load=web,web_kanban
   versions:
     - version: 10.0.0
       operations:
         pre:
           - anthem songs.install.pre::main
-        post:
-          - anthem openerp.addons.cloud_platform.songs::install_exoscale
-          - anthem songs.install.accounting::main
-          - anthem songs.install.logistics::main
-          - anthem songs.install.data_all::main
       modes:
         full:
           operations:
@@ -22,10 +18,36 @@ migration:
               - anthem songs.install.data_demo::main
       addons:
         upgrade:
-          - server_environment
-          - base_technical_features
           #### core
-          # - sale_stock
-          # - purchase
-          #### local-src
-          # - my_addon
+          - account_accountant
+          - analytic
+          - board
+          - hr_timesheet
+          - mrp
+          - procurement
+          - product
+          - project
+          - purchase
+          - sale
+          - sale_stock
+          - stock
+          - stock_account
+          # l10n-switzerland
+          - l10n_ch
+          - l10n_ch_bank
+          - l10n_ch_base_bank
+          - l10n_ch_dta
+          - l10n_ch_pain_base
+          - l10n_ch_states
+          - l10n_ch_zip
+          #### OCA/server-tools
+          - base_technical_features
+          - date_range
+          - mail_environment
+          - server_environment
+          #### camptocamp/cloud-platform
+          - cloud_platform
+          #### OCA/account-financial-reporting
+          - account_financial_report_qweb
+          #### OCA/account-financial-tools
+          - account_fiscal_year
