[FIX] typo in enterprise path

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "odoo/odoo/external-src/enterprise"]
 	path = odoo/odoo/external-src/enterprise
 	url = git@github.com:odoo/enterprise
+[submodule "odoo/external-src/enterprise"]
+	path = odoo/external-src/enterprise
+	url = git@github.com:odoo/enterprise
