[ci skip] [ADD] enterprise camptocamp fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = git@github.com:OCA/account-financial-tools
 [submodule "odoo/external-src/enterprise"]
 	path = odoo/external-src/enterprise
-	url = git@github.com:odoo/enterprise
+	url = git@github.com:camptocamp/enterprise
