[BSSFL-88] Import users Odoo (#4)
* [ADD] Import users Odoo

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -11,10 +11,12 @@ migration:
         full:
           operations:
             post:
+              - anthem songs.install.data_all::main
               - anthem songs.install.data_full::main
         demo:
           operations:
             post:
+              - anthem songs.install.data_all::main
               - anthem songs.install.data_demo::main
       addons:
         upgrade:
