--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -7,6 +7,12 @@ migration:
       operations:
         pre:
           - anthem songs.install.pre::main
+        post:
+          - anthem songs.install.base_setup::settings
+          - anthem songs.install.mrp::settings
+          - anthem songs.install.purchase::settings
+          - anthem songs.install.sale::settings
+          - anthem songs.install.logistics::settings
       modes:
         full:
           operations:
