--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,7 @@
 [submodule "odoo/external-src/sale-workflow"]
 	path = odoo/external-src/sale-workflow
 	url = git@github.com:OCA/sale-workflow.git
+[submodule "odoo/external-src/account-analytic"]
+	path = odoo/external-src/account-analytic
+	url = git@github.com:OCA/account-analytic.git
+	branch = 10.0
