--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -25,6 +25,7 @@ ENV ADDONS_PATH="/opt/odoo/external-src/enterprise, \
   /opt/odoo/external-src/account-financial-tools, \
   /opt/odoo/external-src/bank-payment, \
   /opt/odoo/external-src/l10n-switzerland, \
+  /opt/odoo/external-src/odoo-prototype, \
   /opt/odoo/external-src/partner-contact, \
   /opt/odoo/external-src/reporting-engine, \
   /opt/odoo/external-src/sale-workflow, \
