--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -24,6 +24,10 @@ migration:
             post:
               - anthem songs.install.data_all::main
               - anthem songs.install.data_demo::main
+          addons:
+            upgrade:
+              # camptocamp/odoo-prototype
+              - base_settings_exporter
       addons:
         upgrade:
           # CORE
