--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -98,5 +98,7 @@ migration:
           - sf_report
           - sf_rma_mrp_repair
           - sf_stock
+          - sf_account_analytic
+          - sf_account_budget
     - version: 10.1.0
     - version: 10.2.0
