--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -95,4 +95,5 @@ migration:
           - sf_partner_entity_type
           - sf_stock
           - sf_rma_mrp_repair
+          - sf_account_analytic
     - version: 10.1.0
