Add Parrot businesss financial consolidation account field

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -97,5 +97,5 @@ migration:
           - sf_partner
           - sf_rma_mrp_repair
           - sf_account_analytic
-    - version: 10.1.0
+          - sf_account
     - version: 10.2.0
