--- a/.gitmodules
+++ b/.gitmodules
@@ -39,3 +39,6 @@
 	path = odoo/external-src/odoo-prototype
 	url = git@github.com:camptocamp/odoo-prototype.git
 	branch = 10.0
+[submodule "odoo/external-src/web"]
+	path = odoo/external-src/web
+	url = git@github.com:OCA/web.git
