--- a/.gitmodules
+++ b/.gitmodules
@@ -41,4 +41,4 @@
 	branch = 10.0
 [submodule "odoo/external-src/web"]
 	path = odoo/external-src/web
-	url = git@github.com:OCA/web.git
+	url = git@github.com:camptocamp/web.git
