--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -88,6 +88,7 @@ migration:
           # OCA/account-analytic
           - analytic_tag_dimension
           # OCA/Web
+          - web_domain_field
           - web_environment_ribbon
           - server_environment_ir_config_parameter
           # SENSEFLY
