Partner carrier accounts

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -108,6 +108,7 @@ migration:
           - sf_rma
           - sf_rma_mrp_repair
           - sf_stock
+          - sf_carrier_partner
     - version: 10.1.0
     - version: 10.2.0
     - version: 10.3.0
