--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 [submodule "odoo/external-src/web"]
 	path = odoo/external-src/web
 	url = git@github.com:camptocamp/web.git
+[submodule "odoo/external-src/stock-logistics-workflow"]
+	path = odoo/external-src/stock-logistics-workflow
+	url = git@github.com:camptocamp/stock-logistics-workflow.git
