--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -86,6 +86,8 @@ migration:
           - server_environment
           # OCA/sale-workflow
           - sale_exception
+          # OCA/stock-logistics-workflow
+          - stock_picking_invoice_link
           # OCA/account-analytic
           - analytic_tag_dimension
           # OCA/Web
