--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -76,6 +76,7 @@ migration:
           - l10n_ch_import_cresus
           # OCA/partner-contact
           - base_location
+          - base_partner_merge
           - partner_identification
           # OCA/reporting-engine
           - report_xlsx
