--- a/odoo/pending-merges.yaml
+++ b/odoo/pending-merges.yaml
@@ -36,3 +36,12 @@
      # [10.0][ADD] module analytic_tag_default
    - oca refs/pull/128/head
  target: *default_target
+./external-src/sale-workflow:
+ remotes:
+   oca: git@github.com:OCA/sale-workflow.git
+   camptocamp: git@github.com:camptocamp/sale-workflow.git
+ merges:
+   - oca 10.0
+     # [10.0][add] Module product price category
+   - oca refs/pull/517/head
+ target: *default_target
