--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -130,6 +130,7 @@ migration:
           - sf_stock
           - sf_terms_and_conditions
           - sf_mysensefly
+          - sf_stock_picking_crystal_link
     - version: 10.1.0
     - version: 10.2.0
     - version: 10.3.0
