Install modules analytic_tag_default, sale_analytic_tag_dimension, purchase_analytic_tag_dimension

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -91,6 +91,9 @@ migration:
           - stock_picking_invoice_link
           # OCA/account-analytic
           - analytic_tag_dimension
+          - analytic_tag_default
+          - purchase_analytic_tag_dimension
+          - sale_analytic_tag_dimension
           # OCA/Web
           - web_domain_field
           - web_environment_ribbon
