--- a/.gitmodules
+++ b/.gitmodules
@@ -33,8 +33,7 @@
 	url = git@github.com:OCA/sale-workflow.git
 [submodule "odoo/external-src/account-analytic"]
 	path = odoo/external-src/account-analytic
-	url = git@github.com:OCA/account-analytic.git
-	branch = 10.0
+	url = git@github.com:camptocamp/account-analytic.git
 [submodule "odoo/external-src/odoo-prototype"]
 	path = odoo/external-src/odoo-prototype
 	url = git@github.com:camptocamp/odoo-prototype.git
