Install module sale_order_lot_selection

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -89,6 +89,7 @@ migration:
           - server_environment
           # OCA/sale-workflow
           - sale_exception
+          - sale_order_lot_selection
           # OCA/stock-logistics-workflow
           - stock_picking_invoice_link
           # OCA/account-analytic
