Add sf_mysensefly in migration.yml

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -125,6 +125,7 @@ migration:
           - sf_sales_forecast
           - sf_stock
           - sf_terms_and_conditions
+          - sf_mysensefly
     - version: 10.1.0
     - version: 10.2.0
     - version: 10.3.0
