Account invoicing submodules

--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -33,6 +33,7 @@ ENV ADDONS_PATH="/opt/odoo/external-src/enterprise, \
   /opt/odoo/external-src/server-tools, \
   /opt/odoo/external-src/stock-logistics-workflow, \
   /opt/odoo/external-src/web, \
+  /opt/odoo/external-src/account-invoicing, \
   /opt/odoo/local-src," \
   LIMIT_TIME_CPU=86400 \
   LIMIT_TIME_REAL=86400 \
