--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -108,6 +108,8 @@ migration:
           - web_domain_field
           - web_environment_ribbon
           - server_environment_ir_config_parameter
+          # OCA/account-invoicing
+          - account_invoice_fiscal_position_update
           # SENSEFLY
           - product_price_category
           - sf_account
@@ -134,6 +136,7 @@ migration:
           - sf_mysensefly
           - sf_stock_picking_crystal_link
           - mrp_team
+          - sf_sale_invoice_fiscal_position
     - version: 10.1.0
     - version: 10.2.0
     - version: 10.3.0
