Add section on quotation and invoice reports

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -127,6 +127,7 @@ migration:
           - sf_rma
           - sf_rma_mrp_repair
           - sf_rma_sale_order
+          - sf_sale
           - sf_sale_order_delivery_info
           - sf_sales_forecast
           - sf_stock
