--- a/odoo/pending-merges.yaml
+++ b/odoo/pending-merges.yaml
@@ -65,3 +65,12 @@
       # [MIG][10.0] account_cutoff_accrual_picking
     - oca refs/pull/52/head
   target: *default_target
+./external-src/account-financial-tools:
+  remotes:
+    oca: git@github.com:OCA/account-financial-tools.git
+    camptocamp: git@github.com:camptocamp/account-financial-tools.git
+  merges:
+    - oca 10.0
+      # [10.0][ADD] Module account_tag_category
+    - oca refs/pull/535/head
+  target: *default_target
