Pull sale_partner_incoterm from oca pending merge

--- a/odoo/pending-merges.yaml
+++ b/odoo/pending-merges.yaml
@@ -46,6 +46,8 @@
    - oca 10.0
      # [10.0][add] Module product price category
    - oca refs/pull/517/head
+     # [10.0][add] Module sale_partner_incoterm
+   - oca refs/pull/548/head
  target: *default_target
 ./external-src/server-tools:
  remotes:
