--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -102,6 +102,7 @@ migration:
           - sale_product_set
           - sale_product_set_layout
           - sale_validity
+          - sale_partner_incoterm
           # OCA/stock-logistics-workflow
           - stock_picking_invoice_link
           # OCA/account-analytic
