--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -150,6 +150,7 @@ migration:
           - sale_partner_incoterm
           - sf_sale_invoice_fiscal_position
           - sf_rma_webhook
+          - sf_emoji
     - version: 10.1.0
     - version: 10.2.0
     - version: 10.3.0
