--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -106,6 +106,7 @@ migration:
           # OCA/stock-logistics-workflow
           - stock_picking_invoice_link
           - stock_disable_force_availability_button
+          - stock_available_immediately
           # OCA/account-analytic
           - account_analytic_default_tag
           - account_analytic_default_tag_purchase
