--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,12 @@
-[submodule "odoo/external-src/l10n-switzerland"]
-	path = odoo/external-src/l10n-switzerland
-	url = git@github.com:camptocamp/l10n-switzerland.git
 [submodule "odoo/src"]
 	path = odoo/src
 	url = git@github.com:OCA/OCB.git
-[submodule "odoo/external-src/server-tools"]
-	path = odoo/external-src/server-tools
-	url = git@github.com:camptocamp/server-tools.git
 [submodule "odoo/external-src/account-financial-reporting"]
 	path = odoo/external-src/account-financial-reporting
 	url = git@github.com:OCA/account-financial-reporting
 [submodule "odoo/external-src/account-financial-tools"]
 	path = odoo/external-src/account-financial-tools
-	url = git@github.com:camptocamp/account-financial-tools
+	url = git@github.com:oca/account-financial-tools
 [submodule "odoo/external-src/enterprise"]
 	path = odoo/external-src/enterprise
 	url = git@github.com:camptocamp/enterprise
@@ -25,10 +19,12 @@
 [submodule "odoo/external-src/bank-statement-reconcile"]
 	path = odoo/external-src/bank-statement-reconcile
 	url = git@github.com:OCA/bank-statement-reconcile.git
-	branch = 10.0
 [submodule "odoo/external-src/account-closing"]
 	path = odoo/external-src/account-closing
 	url = git@github.com:camptocamp/account-closing.git
+[submodule "odoo/external-src/l10n-switzerland"]
+	path = odoo/external-src/l10n-switzerland
+	url = git@github.com:oca/l10n-switzerland.git
 [submodule "odoo/external-src/partner-contact"]
 	path = odoo/external-src/partner-contact
 	url = git@github.com:OCA/partner-contact.git
@@ -41,21 +37,21 @@
 [submodule "odoo/external-src/odoo-prototype"]
 	path = odoo/external-src/odoo-prototype
 	url = git@github.com:camptocamp/odoo-prototype.git
-	branch = 10.0
-[submodule "odoo/external-src/web"]
-	path = odoo/external-src/web
-	url = git@github.com:camptocamp/web.git
 [submodule "odoo/external-src/stock-logistics-workflow"]
 	path = odoo/external-src/stock-logistics-workflow
 	url = git@github.com:camptocamp/stock-logistics-workflow.git
 [submodule "odoo/external-src/account-invoicing"]
         path = odoo/external-src/account-invoicing
         url = git@github.com:OCA/account-invoicing.git
-        branch = 10.0
 [submodule "odoo/external-src/odoo-usability"]
 	path = odoo/external-src/odoo-usability
 	url = git@github.com:akretion/odoo-usability.git
 [submodule "odoo/external-src/stock-logistics-warehouse"]
 	path = odoo/external-src/stock-logistics-warehouse
 	url = git@github.com:OCA/stock-logistics-warehouse.git
-	branch = 10.0
+[submodule "odoo/external-src/server-tools"]
+	path = odoo/external-src/server-tools
+	url = git@github.com:oca/server-tools.git
+[submodule "odoo/external-src/web"]
+	path = odoo/external-src/web
+	url = git@github.com:oca/web.git
