--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -15,6 +15,8 @@ migration:
           - anthem songs.install.logistics::main
           - anthem songs.install.manufacturing::settings
           - anthem songs.install.ldap::main
+          - anthem songs.install.inc.stock::main
+          - anthem songs.install.sa.stock::main
       modes:
         full:
           operations:
