[BSSFL-418] Settings email

--- a/odoo/local-src/server_environment_files/prod/base.conf
+++ b/odoo/local-src/server_environment_files/prod/base.conf
@@ -1,2 +1,19 @@
 [ir.config_parameter]
 ribbon.name=False
+
+[incoming_mail]
+server=outlook.office365.com
+port=993
+type=imap
+is_ssl=1
+attach=1
+priority=1
+user=erp@sensefly.com
+password=0d001984!
+
+[outgoing_mail]
+smtp_host=smtp.office365.com
+smtp_port=587
+smtp_encryption=starttls
+smtp_user=erp@sensefly.com
+smtp_pass=0d001984!
