[BSSFL-450] Setting email 2

--- a/odoo/local-src/server_environment_files/prod/base.conf
+++ b/odoo/local-src/server_environment_files/prod/base.conf
@@ -12,8 +12,8 @@ user=erp@sensefly.com
 password=0d001984!
 
 [outgoing_mail]
-smtp_host=smtp.office365.com
-smtp_port=587
-smtp_encryption=starttls
-smtp_user=erp@sensefly.com
-smtp_pass=0d001984!
+smtp_host=sensefly-com.mail.protection.outlook.com
+smtp_port=25
+smtp_encryption=non
+smtp_user=
+smtp_pass=
