--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,7 @@
 [submodule "odoo/external-src/web"]
 	path = odoo/external-src/web
 	url = git@github.com:oca/web.git
+[submodule "odoo/external-src/bank-statement-import"]
+	path = odoo/external-src/bank-statement-import
+	url = git@github.com:OCA/bank-statement-import.git
+	branch = 10.0
