Module instalation account_bank_statement_import_camt incremental

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -130,8 +130,6 @@ migration:
           - account_invoice_fiscal_position_update
           # akretion/odoo-usability
           - sale_layout_category_product
-          # OCA/bank-statement-import
-          - account_bank_statement_import_camt
           # SENSEFLY
           - product_price_category
           - sf_account
@@ -184,3 +182,8 @@ migration:
       addons:
         upgrade:
           - sf_stock
+    - version: 10.13.0
+      addons:
+        upgrade:
+          # OCA/bank-statement-import
+          - account_bank_statement_import_camt
