--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -188,3 +188,6 @@ migration:
           # OCA/bank-statement-import
           - account_bank_statement_import_camt
     - version: 10.14.0
+      addons:
+        upgrade:
+          - sf_purchase
