[FIX][BIZ-1131] fix validating stock.picking error

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -187,3 +187,4 @@ migration:
         upgrade:
           # OCA/bank-statement-import
           - account_bank_statement_import_camt
+    - version: 10.14.0
