BSSFL-485: Custom sale order report (add field note)

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -211,3 +211,7 @@ migration:
           - sf_rma
           - sf_stock
           - sf_account
+    - version: 10.17.0
+      addons:
+        upgrade:
+          - sf_sale
