RMA number is readonly

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -220,3 +220,4 @@ migration:
           - sf_sale
           # oca account-financial-tools
           - account_asset_management
+          - sf_rma
