[BSSFL-478] DN/Invoice
* DN/Invoice

* Ticket number

* Add bottom text and change title

* Remove duplicated history line

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -221,3 +221,4 @@ migration:
           # oca account-financial-tools
           - account_asset_management
           - sf_rma
+          - sf_stock
