--- a/odoo/local-src/server_environment_files/prod/base.conf
+++ b/odoo/local-src/server_environment_files/prod/base.conf
@@ -14,6 +14,6 @@ password=0d001984!
 [outgoing_mail]
 smtp_host=sensefly-com.mail.protection.outlook.com
 smtp_port=25
-smtp_encryption=non
+smtp_encryption=none
 smtp_user=
 smtp_pass=
