BSSFL-488: Change RMA rules for picking generation (from sale order)
And fix nginx version for dev build

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -254,3 +254,8 @@ migration:
           - sf_product
           - sf_stock
           - sf_sale
+    - version: 10.22.0
+      addons:
+        upgrade:
+          # local-src
+          - sf_rma
