Tax account in journal item tree view

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -240,3 +240,4 @@ migration:
           - l10n_ch_payment_slip
           - l10n_ch_scan_bvr
           - sf_account_cutoff
+          - sf_account
